--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    "target": "esnext",
     "jsx": "react-native",
-    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "include": ["src", "App.tsx"]
 }
